# blobify

./: README.md  com.felixbrezo.Blobify.json  meson.build
data/: com.felixbrezo.Blobify.appdata.xml.in  com.felixbrezo.Blobify.desktop.in  com.felixbrezo.Blobify.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: Main.vala  meson.build
src/core/: URIGenerator.vala
src/gui/: HeaderBar.vala  ResultsView.vala  SettingsMenu.vala  TextDialog.vala  URIDialog.vala  WelcomeView.vala  Window.vala
